Bugfix: filter tab no longer invisible after first load, now uses it's own invisibleFilters class to avoid conflicts with add task form, which should be invisible on page load.

--- a/scss/modules/_all.scss
+++ b/scss/modules/_all.scss
@@ -22,12 +22,18 @@ main{
   flex-direction: column;
 }
 
-.invisible{
+.invisibleFilters{
   @media (max-width: 768px) {
     display: none;
     visibility: hidden;
     height: 0;
   }
+}
+
+.invisibleForm{
+    display: none;
+    visibility: hidden;
+    height: 0;
 }
 
 
